update docker to atd-testdrivetraining-dev

--- a/nested-labvm/atd-docker/cloud-builds/ssh.yaml
+++ b/nested-labvm/atd-docker/cloud-builds/ssh.yaml
@@ -7,7 +7,7 @@ steps:
     'us.gcr.io/${_GCLOUD_PROJECT}/atddocker_ssh:${_VERSION}',
     'ssh/.']
 substitutions:
-  _GCLOUD_PROJECT: beta-atds
+  _GCLOUD_PROJECT: atd-testdrivetraining-dev
   _VERSION: "0.1"
   _TAG: "0.3.0"
 images: [
