--- a/nested-labvm/atd-docker/cloud-builds/conftopo.yaml
+++ b/nested-labvm/atd-docker/cloud-builds/conftopo.yaml
@@ -5,7 +5,7 @@ steps:
     'us.gcr.io/${_GCLOUD_PROJECT}/atddocker_conftopo:${_VERSION}',
     'confTopo/.']
 substitutions:
-  _GCLOUD_PROJECT: beta-atds
+  _GCLOUD_PROJECT: atd-testdrivetraining-dev
   _VERSION: "0.1"
 images: [
   'us.gcr.io/${_GCLOUD_PROJECT}/atddocker_conftopo:${_VERSION}',
