--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -418,7 +418,7 @@ topologies:
             resources:
               cpu: 32
               ram: 64
-            branch: v2021.3-20220609a
+            branch: 2021.3-3.0
             orderable: true
             image: base-training-l1-e4-27-2f-c2021-3-0-20220825
             eos:
@@ -463,7 +463,7 @@ topologies:
             resources:
               cpu: 32
               ram: 64
-            branch: v2021.3-20220609a
+            branch: 2021.3-3.0
             orderable: true
             image: base-training-l2-e4-27-2f-c2021-3-0-20220830
             eos:
@@ -535,7 +535,7 @@ topologies:
             resources:
               cpu: 40
               ram: 80
-            branch: v2021.3-20220609a
+            branch: 2021.3-3.0
             orderable: true
             image: base-training-l3-e4-27-2f-c2021-3-0-20220901
             eos:
@@ -589,7 +589,7 @@ topologies:
             resources:
               cpu: 40
               ram: 80
-            branch: v2021.3-20220609a
+            branch: 2021.3-3.0
             orderable: true
             image: base-training-l3-exam-e4-27-2f-c2021-3-0-20220831
             eos:
@@ -634,7 +634,7 @@ topologies:
             resources:
               cpu: 40
               ram: 80
-            branch: v2021.3-20220609a
+            branch: 2021.3-3.0
             orderable: true
             image: base-training-l3-exam-2-e4-27-2f-c2021-3-0-20220831
             eos:
@@ -693,7 +693,7 @@ topologies:
             resources:
               cpu: 60
               ram: 90
-            branch: v2021.3-20220609a
+            branch: 2021.3-3.0
             orderable: true
             image: base-training-l4-e4-27-2f-c2021-3-0-20220831
             eos:
@@ -749,7 +749,7 @@ topologies:
             resources:
               cpu: 48
               ram: 72
-            branch: v2021.3-20220609a
+            branch: 2021.3-3.0
             orderable: true
             image: base-training-l5-ceos-c2021-3-0-20220905
             eos:
@@ -805,7 +805,7 @@ topologies:
             resources:
               cpu: 40
               ram: 70
-            branch: v2021.3-20220609a
+            branch: 2021.3-3.0
             orderable: true
             image: base-training-l7-ceos-c2021-3-0-20220629
             eos:
