--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -639,6 +639,15 @@ topologies:
             eos:
               - 4.25.1F
               - 4.26.0F
+          2021.3.0:
+            resources:
+              cpu: 60
+              ram: 80
+            branch: 2021.3-3.0
+            orderable: true
+            image: base-training-l7-ceos-c2021-3-0-20220815
+            eos:
+              - 4.27.2F
     desc: 'Level 7 Training Lab. For use by the Arista Training Team.'
     name: 'Training - Level 7'
     title: 'Training Level 7 Lab'
