--- a/nested-labvm/atd-docker/login/Dockerfile
+++ b/nested-labvm/atd-docker/login/Dockerfile
@@ -35,6 +35,8 @@ COPY src/resetVMs.py /usr/local/bin
 
 COPY src/uploadExam.py /usr/local/bin
 
+COPY src/localGrading.py /usr/local/bin
+
 COPY src/saveRunning.py /usr/local/bin
 
 RUN chmod +x /usr/local/bin/login.py
@@ -42,6 +44,8 @@ RUN chmod +x /usr/local/bin/login.py
 RUN chmod +x /usr/local/bin/resetVMs.py
 
 RUN chmod +x /usr/local/bin/uploadExam.py
+
+RUN chmod +x /usr/local/bin/localGrading.py
 
 RUN chmod +x /usr/local/bin/saveRunning.py
 
