update l3-2-exam image and map

--- a/topologies/training-level3-2/files/apps/uilanding/modules.yaml
+++ b/topologies/training-level3-2/files/apps/uilanding/modules.yaml
@@ -2,35 +2,38 @@ topology:
   image: "atd-topo.png"
   nodes:
     Spine1:
-      coords: "65,197,245,279"
+      coords: "190,10,311,71"
       ip: "192.168.0.11"
     Spine2:
-      coords: "360,196,543,280"
+      coords: "387,11,511,69"
       ip: "192.168.0.12"
     Spine3:
-      coords: "656,196,837,282"
+      coords: "589,14,709,71"
       ip: "192.168.0.13"
     Leaf1:
-      coords: "24,491,208,575"
+      coords: "15,214,137,268"
       ip: "192.168.0.21"
     Leaf2:
-      coords: "248,491,432,576"
+      coords: "166,212,290,268"
       ip: "192.168.0.22"
     Leaf3:
-      coords: "471,489,655,575"
+      coords: "318,213,442,270"
       ip: "192.168.0.23"
     Leaf4:
-      coords: "696,491,878,575"
+      coords: "467,213,587,270"
       ip: "192.168.0.24"
     BorderLeaf1:
-      coords: "204,20,386,107"
+      coords: "619,213,734,268"
       ip: "192.168.0.25"
     BorderLeaf2:
-      coords: "498,21,680,106"
+      coords: "769,213,884,268"
       ip: "192.168.0.26"
     Host1:
-      coords: "141,646,325,733"
+      coords: "95,317,213,373"
       ip: "192.168.0.51"
     Host2:
-      coords: "589,647,774,733"
+      coords: "397,318,521,375"
       ip: "192.168.0.52"
+    Firewall:
+      coords: "688,321,811,374"
+      ip: "192.168.0.53"
