--- a/topologies/training-level3/files/MenuOptions.yaml
+++ b/topologies/training-level3/files/MenuOptions.yaml
@@ -3,253 +3,212 @@ options:
   reset:
   -   command: "/usr/local/bin/ConfigureTopology.py && bash /home/arista/Broadcaster/pushHostDefaultConfig.sh"
       description: "Reset All Devices to Base ATD (reset)"
-  mlag:
-  -   command: "/usr/local/bin/ConfigureTopology.py -t mlag"
-      description: "MLAG Lab (mlag)"
-  bgp:
-  -   command: "/usr/local/bin/ConfigureTopology.py -t bgp"
-      description: "BGP Lab (bgp)"
   vxlan:
   -   command: "/usr/local/bin/ConfigureTopology.py -t vxlan"
-      description: "VXLAN Lab (vxlan) excludes leaf3 instead of leaf4"
+      description: "VXLAN Lab (vxlan)"
   l2evpn:
   -   command: "/usr/local/bin/ConfigureTopology.py -t l2evpn"
-      description: "EVPN Type 2 Lab (l2evpn) excludes leaf3 instead of leaf4"
+      description: "L2-EVPN Lab (l2evpn)"
   l3evpn:
   -   command: "/usr/local/bin/ConfigureTopology.py -t l3evpn"
-      description: "EVPN Type 5 Lab (l3evpn) excludes leaf3 instead of leaf4"
-  cvp:
-  -   command: "/usr/local/bin/ConfigureTopology.py -t cvp"
-      description: "CVP lab (cvp)"
-  media:
-  -   command: "bash /home/arista/Broadcaster/pushHostMediaConfig.sh && login.py"
-      description: "Broadcast Engineer Training (media)"
+      description: "L3-EVPN Lab (l3evpn)"
+  aamh:
+  -   command: "/usr/local/bin/ConfigureTopology.py -t aamh"
+      description: "Active-Active Multi Homing lab (aamh)"
+  pim:
+  -   command: "/usr/local/bin/ConfigureTopology.py -t aamh"
+      description: "PIM Lab (pim)"
 labconfiglets:
-  mlag:
-    spine1:
-      - "Spine1-MLAG-Lab"
-      - "VLANs"
-    spine2:
-      - "Spine2-MLAG-Lab"
-      - "VLANs"
-    leaf1:
-      - "Leaf1-MLAG-Lab"
-      - "VLANs"
-    leaf2:
-      - "Leaf2-MLAG-Lab"
-      - "VLANs"
-    leaf3:
-      - "Leaf3-MLAG-Lab"
-      - "VLANs"
-    leaf4:
-      - "VLANs"
-    cvx01:
-      - "cvx01-Controller"
-    host1:
-      - "Host1-ATD"
-    host2:
-      - "Host2-ATD"
-  bgp:
-    spine1:
-      - "Spine1-BGP-Lab"
-    spine2:
-      - "Spine2-BGP-Lab"
-    leaf1:
-      - "Leaf1-BGP-Lab"
-    leaf2:
-      - "Leaf2-BGP-Lab"
-    leaf3:
-      - "Leaf3-BGP-Lab"
-    leaf4:
-      - "Leaf4-BGP-Lab"
-    cvx01:
-      - "cvx01-Controller"
-    host1:
-      - "Host1-ATD"
-    host2:
-      - "Host2-ATD"
+  reset:
+   spine1:
+     - "spine1-base"
+   spine2:
+     - "spine2-base"
+   spine3:
+     - "spine3-base"
+   leaf1:
+     - "leaf1-base"
+   leaf2:
+     - "leaf2-base"
+   leaf3:
+     - "leaf3-base"
+   leaf4:
+     - "leaf4-base"
+   host1:
+     - "host1-base"
+   host2:
+     - "host2-base"
+   borderleaf1:
+     - "borderleaf1-base"
+   borderleaf2:
+     - "borderleaf2-base"
   vxlan:
     spine1:
-      - "Spine1-BGP-Lab"
+      - "spine1-base"
+      - "Spine-1-VXALN-Begin"
     spine2:
-      - "Spine2-BGP-Lab"
+      - "spine2-base"
+      - "Spine-2-VXALN-Begin"
+    spine3:
+      - "spine3-base"
+      - "Spine-3-VXALN-Begin"
     leaf1:
-      - "Leaf1-VXLAN-Lab"
-      - "VLANs"
+      - "leaf1-base"
+      - "Leaf-1-VXALN-Begin"
     leaf2:
-      - "Leaf2-VXLAN-Lab"
-      - "VLANs"
+      - "leaf2-base"
+      - "Leaf-1-VXALN-Begin"
     leaf3:
-      - "Leaf3-VXLAN-Lab"
-      - "VLANs"
+      - "leaf3-base"
+      - "leaf-3-VXALN-Begin"
     leaf4:
-      - "Leaf4-VXLAN-Lab"
-      - "VLANs"
-    cvx01:
-      - "cvx01-Controller"
+      - "leaf4-base"
+      - "leaf-3-VXALN-Begin"
     host1:
-      - "Host1-ATD"
+      - "host1-base"
+      - "Host-1-VXALN-Begin"
     host2:
-      - "Host2-ATD"
+      - "host2-base"
+      - "Host-2-VXALN-Begin"
+    borderleaf1:
+      - "borderleaf1-base"
+      - "Borderleaf-1-VXALN-Begin"
+    borderleaf2:
+      - "borderleaf2-base"
+      - "Borderleaf-2-VXALN-Begin"
   l2evpn:
     spine1:
-      - "Spine1-L2EVPN-Lab"
+      - "spine1-base"
+      - "Spine-1-L2EVPN-Begin"
     spine2:
-      - "Spine2-L2EVPN-Lab"
+      - "spine2-base"
+      - "Spine-2-L2EVPN-Begin"
+    spine3:
+      - "spine3-base"
+      - "Spine-3-L2EVPN-Begin"
     leaf1:
-      - "Leaf1-L2EVPN-Lab"
-      - "VLANs"
+      - "leaf1-base"
+      - "Leaf-1-L2EVPN-Begin"
     leaf2:
-      - "Leaf2-L2EVPN-Lab"
-      - "VLANs"
+      - "leaf2-base"
+      - "Leaf-2-L2EVPN-Begin"
     leaf3:
-      - "VLANs"
+      - "leaf3-base"
+      - "Leaf-3-L2EVPN-Begin"
     leaf4:
-      - "Leaf4-L2EVPN-Lab"
-      - "VLANs"
-    cvx01:
-      - "cvx01-Controller"
+      - "leaf4-base"
+      - "Leaf-4-L2EVPN-Begin"
     host1:
-      - "Host1-ATD"
+      - "host1-base"
+      - "Host-1-L2EVPN-Begin"
     host2:
-      - "Host2-ATD"
+      - "host2-base"
+      - "Host-2-L2EVPN-Begin"
+    borderleaf1:
+      - "borderleaf1-base"
+      - "Borderleaf-1-L2EVPN-Begin"
+    borderleaf2:
+      - "borderleaf2-base"
+      - "Borderleaf-2-L2EVPN-Begin"
   l3evpn:
     spine1:
-      - "Spine1-L3EVPN-Lab"
+      - "spine1-base"
+      - "Spine-1-L3EVPN-Begin"
     spine2:
-      - "Spine2-L3EVPN-Lab"
+      - "spine2-base"
+      - "Spine-2-L3EVPN-Begin"
+    spine3:
+      - "spine3-base"
+      - "Spine-3-L3EVPN-Begin"
     leaf1:
-      - "Leaf1-L3EVPN-Lab"
+      - "leaf1-base"
+      - "Leaf-1-L3EVPN-Begin"
     leaf2:
-      - "Leaf2-L3EVPN-Lab"
+      - "leaf2-base"
+      - "Leaf-2-L3EVPN-Begin"
     leaf3:
-      - "VLANs"
+      - "leaf3-base"
+      - "Leaf-3-L3EVPN-Begin"
     leaf4:
-      - "Leaf4-L3EVPN-Lab"
-    cvx01:
-      - "cvx01-Controller"
+      - "leaf4-base"
+      - "Leaf-4-L3EVPN-Begin"
     host1:
-      - "Host1-ATD"
+      - "host1-base"
+      - "Host-1-L3EVPN-Begin"
     host2:
-      - "Host2-ATD"
-  cvp:
+      - "host2-base"
+      - "Host-2-L3EVPN-Begin"
+    borderleaf1:
+      - "borderleaf1-base"
+      - "Borderleaf-1-L3EVPN-Begin"
+    borderleaf2:
+      - "borderleaf2-base"
+      - "Borderleaf-2-L3EVPN-Begin"
+  aamh:
     spine1:
-      - "Spine1-BGP-Lab"
+      - "spine1-base"
+      - "Spine-1-AAMH-Begin"
     spine2:
-      - "Spine2-BGP-Lab"
+      - "spine2-base"
+      - "Spine-2-AAMH-Begin"
+    spine3:
+      - "spine3-base"
+      - "Spine-3-AAMH-Begin"
     leaf1:
-      - "Leaf1-BGP-Lab"
+      - "leaf1-base"
+      - "Leaf-1-AAMH-Begin"
     leaf2:
-      - "Leaf2-BGP-Lab"
+      - "leaf2-base"
+      - "Leaf-2-AAMH-Begin"
     leaf3:
-      - "Leaf3-BGP-Lab"
+      - "leaf3-base"
+      - "Leaf-3-AAMH-Begin"
     leaf4:
-      - "Leaf4-BGP-Lab-Full"
-    cvx01:
-      - "cvx01-Controller"
+      - "leaf4-base"
+      - "Leaf-4-AAMH-Begin"
     host1:
-      - "Host1-ATD"
+      - "host1-base"
+      - "Host-1-AAMH-Begin"
     host2:
-      - "Host2-ATD"
-  media-reset:
+      - "host2-base"
+      - "Host-2-AAMH-Begin"
+    borderleaf1:
+      - "borderleaf1-base"
+      - "Borderleaf-1-AAMH-Begin"
+    borderleaf2:
+      - "borderleaf2-base"
+      - "Borderleaf-2-AAMH-Begin"
+  pim:
     spine1:
-      - "media-spine1-IP-Intro-start"
+      - "spine1-base"
+      - "Spine-1-PIM-Begin"
     spine2:
-      - "media-spine2-IP-Intro-start"
+      - "spine2-base"
+      - "Spine-2-PIM-Begin"
+    spine3:
+      - "spine3-base"
+      - "Spine-3-PIM-Begin"
     leaf1:
-      - "media-leaf1-IP-Intro-start"
+      - "leaf1-base"
+      - "Leaf-1-PIM-Begin"
     leaf2:
-      - "media-leaf2-IP-Intro-start"
+      - "leaf2-base"
+      - "Leaf-2-PIM-Begin"
     leaf3:
-      - "media-leaf3-IP-Intro-start"
+      - "leaf3-base"
+      - "Leaf-3-PIM-Begin"
     leaf4:
-      - "media-leaf4-IP-Intro-start"
+      - "leaf4-base"
+      - "Leaf-4-PIM-Begin"
     host1:
-      - "Host1-Media"
+      - "host1-base"
+      - "Host-1-PIM-Begin"
     host2:
-      - "Host2-Media"
-  media-intro:
-    spine1:
-      - "media-spine1-IP-Intro-start"
-    spine2:
-      - "media-spine2-IP-Intro-start"
-    leaf1:
-      - "media-leaf1-IP-Intro-start"
-    leaf2:
-      - "media-leaf2-IP-Intro-start"
-    leaf3:
-      - "media-leaf3-IP-Intro-start"
-    leaf4:
-      - "media-leaf4-IP-Intro-start"
-    host1:
-      - "Host1-Media"
-    host2:
-      - "Host2-Media"
-  media-vlan:
-    spine1:
-      - "media-spine1-VLAN-STP-start"
-    spine2:
-      - "media-spine2-VLAN-STP-start"
-    leaf1:
-      - "media-leaf1-VLAN-STP-start"
-    leaf2:
-      - "media-leaf2-VLAN-STP-start"
-    leaf3:
-      - "media-leaf3-VLAN-STP-start"
-    leaf4:
-      - "media-leaf4-VLAN-STP-start"
-    host1:
-      - "Host1-Media"
-    host2:
-      - "Host2-Media"
-  media-ospf:
-    spine1:
-      - "media-spine1-OSPF-start"
-    spine2:
-      - "media-spine2-OSPF-start"
-    leaf1:
-      - "media-leaf1-OSPF-start"
-    leaf2:
-      - "media-leaf2-OSPF-start"
-    leaf3:
-      - "media-leaf3-OSPF-start"
-    leaf4:
-      - "media-leaf4-OSPF-start"
-    host1:
-      - "Host1-Media"
-    host2:
-      - "Host2-Media"
-  media-bgp:
-    spine1:
-      - "media-spine1-BGP-start"
-    spine2:
-      - "media-spine2-BGP-start"
-    leaf1:
-      - "media-leaf1-BGP-start"
-    leaf2:
-      - "media-leaf2-BGP-start"
-    leaf3:
-      - "media-leaf3-BGP-start"
-    leaf4:
-      - "media-leaf4-BGP-start"
-    host1:
-      - "Host1-Media"
-    host2:
-      - "Host2-Media"
-  media-mcast:
-    spine1:
-      - "media-spine1-Multicast-lab"
-    spine2:
-      - "media-spine2-Multicast-lab"
-    leaf1:
-      - "media-leaf1-Multicast-lab"
-    leaf2:
-      - "media-leaf2-Multicast-lab"
-    leaf3:
-      - "media-leaf3-Multicast-lab"
-    leaf4:
-      - "media-leaf4-Multicast-lab"
-    host1:
-      - "Host1-Media"
-    host2:
-      - "Host2-Media"
+      - "host2-base"
+      - "Host-2-PIM-Begin"
+    borderleaf1:
+      - "borderleaf1-base"
+      - "Borderleaf-1-PIM-Begin"
+    borderleaf2:
+      - "borderleaf2-base"
+      - "Borderleaf-2-PIM-Begin"
