--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -430,6 +430,51 @@ topologies:
     access: standard
     disable_links: [labguides, jenkins]
     labguides: self
+  training-level1-exam:
+    dev:
+      veos:
+        cpu: 32
+        ram: 64
+        cvp:
+          2021.3.0:
+            resources:
+              cpu: 32
+              ram: 64
+            branch: nested/2021.3
+            orderable: true
+            image: base-veos-training-l1-exam-2021-3-20221129-115825
+            eos:
+              - 4.27.2F
+    prod:
+      veos:
+        cpu: 32
+        ram: 64
+        cvp:
+          2020.2.3:
+            resources:
+              cpu: 32
+              ram: 64
+            branch: v2020.2-20220404a
+            orderable: false
+            image: base-training-l1-e4-26-0f-c2020-2-3-20211220
+            eos:
+              - 4.26.0F
+          2021.3.0:
+            resources:
+              cpu: 32
+              ram: 64
+            branch: 2021.3-3.7
+            orderable: true
+            image: base-training-l1-e4-27-2f-c2021-3-0-20220825
+            eos:
+              - 4.27.2F
+    desc: 'Level 1 Training Lab. For use by the Arista Training Team.'
+    name: 'Training - Level 1'
+    title: 'Training Level 1 Lab'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins]
+    labguides: self
   training-level2:
     dev:
       veos:
@@ -468,7 +513,43 @@ topologies:
             image: base-training-l2-e4-27-2f-c2021-3-0-20220830
             eos:
               - 4.27.2F
-    desc: 'Level 2 Training Lab. For use by the Arista Training Team.'
+    desc: 'Level 2 Exam Lab. For use by the Arista Training Team.'
+    name: 'Training - Level 2'
+    title: 'Training Level 2 Lab'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins]
+    labguides: self
+  training-level2-exam:
+    dev:
+      veos:
+        cpu: 32
+        ram: 64
+        cvp:
+          2021.3.0:
+            resources:
+              cpu: 32
+              ram: 64
+            branch: nested/2021.3
+            orderable: true
+            image: base-veos-training-l2-exam-2021-3-20221129-115825
+            eos:
+              - 4.27.2F
+    prod:
+      veos:
+        cpu: 32
+        ram: 64
+        cvp:
+          2021.3.0:
+            resources:
+              cpu: 32
+              ram: 64
+            branch: 2021.3-3.7
+            orderable: true
+            image: base-training-l2-e4-27-2f-c2021-3-0-20220830
+            eos:
+              - 4.27.2F
+    desc: 'Level 2 Exam Lab. For use by the Arista Training Team.'
     name: 'Training - Level 2'
     title: 'Training Level 2 Lab'
     disk_size: 300
@@ -699,6 +780,42 @@ topologies:
             eos:
               - 4.27.2F
     desc: 'Level 4 Training Lab. For use by the Arista Training Team.'
+    name: 'Training - Level 4'
+    title: 'Training Level 4 Lab'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins]
+    labguides: self
+  training-level4-exam:
+    dev:
+      veos:
+        cpu: 60
+        ram: 90
+        cvp:
+          2021.3.0:
+            resources:
+              cpu: 60
+              ram: 90
+            branch: nested/2021.3
+            orderable: true
+            image: base-veos-training-l4-exam-2021-3-20221129-115825
+            eos:
+              - 4.27.2F
+    prod:
+      veos:
+        cpu: 32
+        ram: 64
+        cvp:
+          2021.3.0:
+            resources:
+              cpu: 60
+              ram: 90
+            branch: 2021.3-3.7
+            orderable: true
+            image: base-training-l4-e4-27-2f-c2021-3-0-20221018
+            eos:
+              - 4.27.2F
+    desc: 'Level 4 Exam Lab. For use by the Arista Training Team.'
     name: 'Training - Level 4'
     title: 'Training Level 4 Lab'
     disk_size: 300
