updated dockerfile for uilanding

--- a/nested-labvm/atd-docker/uilanding/Dockerfile
+++ b/nested-labvm/atd-docker/uilanding/Dockerfile
@@ -11,7 +11,11 @@ RUN mkdir -p /root/labguides
 
 WORKDIR /root
 
-RUN curl -sSL https://get.docker.com/ | sh
+RUN apt-get update && \
+    apt-get -qy full-upgrade && \
+    apt-get install -qy curl && \
+    apt-get install -qy curl && \
+    curl -sSL https://get.docker.com/ | sh
 
 COPY ./src/html /opt/topo/html/
 
