--- a/nested-labvm/atd-docker/login/Dockerfile
+++ b/nested-labvm/atd-docker/login/Dockerfile
@@ -31,6 +31,8 @@ RUN mkdir .ssh
 
 COPY src/login.py /usr/local/bin
 
+COPY src/callConfigTopo.py /usr/local/bin
+
 COPY src/resetVMs.py /usr/local/bin
 
 COPY src/uploadExam.py /usr/local/bin
