--- a/nested-labvm/atd-docker/docker-compose.yml
+++ b/nested-labvm/atd-docker/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - /home/arista/arista-dir:/home/arista:rw
   login:
     container_name: atd-login
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_login:1.0.7
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_login:1.0.8
     user: $ArID:$ArGD
     restart: always
     hostname: devbox
@@ -85,7 +85,7 @@ services:
       - /opt/ceos:/opt/ceos:rw
   uilanding:
     container_name: atd-uilanding
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:1.0.3
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:1.0.4
     restart: always
     environment:
       - PYTHONUNBUFFERED=1
@@ -93,6 +93,7 @@ services:
       - /etc/atd:/etc/atd:ro
       - /opt/atd:/opt/atd:ro
       - /home/arista/arista-dir/apps/uilanding:/opt/modules:ro
+      - /home/arista/arista-dir/menus:/opt/menus:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
       - atd_nginx
