--- a/nested-labvm/atd-docker/login/Dockerfile
+++ b/nested-labvm/atd-docker/login/Dockerfile
@@ -35,6 +35,8 @@ COPY src/callConfigTopo.py /usr/local/bin
 
 COPY src/resetVMs.py /usr/local/bin
 
+COPY src/lab_status.py /usr/local/bin
+
 COPY src/uploadExam.py /usr/local/bin
 
 COPY src/localGrading.py /usr/local/bin
