modified error response

--- a/nested-labvm/atd-docker/login/Dockerfile
+++ b/nested-labvm/atd-docker/login/Dockerfile
@@ -43,6 +43,8 @@ COPY src/localGrading.py /usr/local/bin
 
 COPY src/saveRunning.py /usr/local/bin
 
+RUN chmod +x /usr/local/bin/lab_status.py
+
 RUN chmod +x /usr/local/bin/login.py
 
 RUN chmod +x /usr/local/bin/resetVMs.py
